welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:9: error: ';' expected but 'true' found.
    estSurVert true
               ^